[package]
name = "yoinkx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
anyhow = "1.0.71"
arboard = "3.2.0"
bytes = "1.4.0"
clap = {version = "4.3.3", features = ["derive"]}
config = "0.13.3"
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures-core = "0.3.28"
futures-util = "0.3.28"
image = "0.24.6"
infer = "0.14.0"
log = "0.4.17"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
regex = "1.8.4"
serde = "1.0.164"
serde_derive = "1.0.164"
tempfile = "3.6.0"
thiserror = "1.0.40"
tokio = "1.28.1"
tracing = {version = "0.1.37", features = ["log", "async-await"]}
tracing-actix-web = "0.7.5"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter"]}
